--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "server": "node --watch api/server/server.js",
+    "project": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
