--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "concurrently": "^9.0.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
