--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev": "vite",
     "server": "node --watch api/server/server.js",
     "project": "concurrently \"npm run server\" \"npm run dev\"",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.7",
